# HoldTheCoyote

./: .gitignore  CMakeLists.txt
Classes/: AppDelegate.cpp  CMakeLists.txt  HelloWorldScene.cpp  HelloWorldScene.h
Classes/Controllers/: CMakeLists.txt
Classes/EngineAbstraction/: CMakeLists.txt
Classes/EngineAbstraction/Cocos/: Action.cpp  Action.h  CMakeLists.txt  EngineFactory.cpp  EngineFactory.h  EventDispatcher.cpp  EventDispatcher.h  EventListener.cpp  EventListener.h  Node.cpp  Node.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsShape.cpp  PhysicsShape.h  Scene.cpp  Scene.h  Size.cpp  Size.h  Sprite.cpp  Sprite.h  Vec2.cpp  Vec2.h
Classes/EngineAbstraction/Interfaces/: Action.h  CMakeLists.txt  EngineFactory.cpp  EngineFactory.h  EventDispatcher.h  EventListener.h  Node.h  PhysicsBody.h  PhysicsShape.h  Scene.h  Size.h  Sprite.h  Vec2.h
Classes/EngineAbstraction/Test/: Action.cpp  Action.h  CMakeLists.txt  EngineFactory.cpp  EngineFactory.h  EventDispatcher.cpp  EventDispatcher.h  EventListener.cpp  EventListener.h  Node.cpp  Node.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsShape.cpp  PhysicsShape.h  Scene.cpp  Scene.h  Size.cpp  Size.h  Sprite.h  Vec2.cpp  Vec2.h
Classes/Models/: CMakeLists.txt  Character.cpp  Character.h  HolderButton.cpp  HolderButton.h  Node.cpp  Node.h
Classes/Models/Aspects/Node/: AddEventListenerWithSceneGraphPriorityAspect.cpp  AddEventListenerWithSceneGraphPriorityAspect.h  AnchorPointAspect.cpp  AnchorPointAspect.h  Aspect.h  CMakeLists.txt  PhysicAspect.cpp  PhysicAspect.h  PositionAspect.cpp  PositionAspect.h  RotationAspect.cpp  RotationAspect.h  RunActionAspect.cpp  RunActionAspect.h  StopActionAspect.cpp  StopActionAspect.h  TextureAspect.cpp  TextureAspect.h
Classes/Models/Observers/: NodeObserver.h
Classes/Models/Physics/: CMakeLists.txt  Physic.cpp  Physic.h  PhysicBox.cpp  PhysicBox.h  PhysicEmpty.cpp  PhysicEmpty.h  PhysicPolygon.cpp  PhysicPolygon.h
Classes/Views/: CMakeLists.txt  Character.cpp  Character.h  HolderButton.cpp  HolderButton.h  Node.cpp  Node.h
proj.android/app/: AndroidManifest.xml
proj.android/app/jni/hellocpp/: main.cpp
proj.win32/: main.cpp
